# DMBertA-EVAL

./: CMakeLists.txt  README.md  eval_record.cc  eval_record.h  generic_llm_client.cc  generic_llm_client.h  inference_handler.cc  inference_handler.h  main.cc
txtbase/: evalbase.json
